[tool.poetry]
name = "aioredis-semaphore"
version = "0.1.0"
description = ""
authors = ["Davi Jimenez <davigetto@gmail.com>", "Dmitrij Vinokour <dmitrij.vinokour@cojodi.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "aioredis_semaphore"}]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
redis = ">=5.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
